# sudoku-solver

./: Dockerfile  README.md  api.py  auto.py  benchmark_result.txt  pyproject.toml  run_direct.py  training_output.txt  yolo_training_logs.txt
benchmark_results/: benchmark.json
data/: README.dataset.txt  README.roboflow.txt  data.yaml  dataset.yaml
data/label-studio/: classes.txt  notes.json
data/label-studio/labels/: 17426bf7-sudoku_001.txt
data/test/labels/: sudoku_103_jpg.rf.8b80cd8081205a5da7630aecb98cad5c.txt  sudoku_1048_jpg.rf.de190150185cafd3db1306dfe688d41f.txt  sudoku_1086_jpg.rf.5564f4f75ba0d67c520cf320747090e4.txt  sudoku_143_jpg.rf.edbfac66aa4f2a657b56d3f625d5f101.txt  sudoku_147_jpg.rf.851d712efc34715d304bd58220ea0f3d.txt  sudoku_156_jpg.rf.cc4174a33b074f72a9649fe080a9073b.txt  sudoku_160_jpg.rf.d6b9190f5711dbac1b681865860dd7ec.txt  sudoku_173_jpg.rf.cf60c45b192280dd046df10cc54a1f5a.txt  sudoku_184_jpg.rf.d1149e9eefcc82dab174879d9669f402.txt  sudoku_194_jpg.rf.4466c00207b07dc14d5bb1366bff5fec.txt  sudoku_3262_jpg.rf.de3ac981c5d5184f1942b51498ddb702.txt  sudoku_3279_jpg.rf.25a3c50b8fb00e4d1099e57c483b1788.txt  sudoku_3287_jpg.rf.64c25f7db4a7fc12f381536e7c5b0f78.txt  (+8 more)
data/train/: labels.cache
data/val/: labels.cache
data/valid/: labels.cache
debug/: bbox.py  cells.py  templates.py
scripts/: benchmark.py  compare.py  generate_yaml.py  screenshot.py  split_train_test.py  tesseract_digits.py  test_yolo.py  train_yolo.py  validate_labels.py
src/: browser.py  detect_grid.py  recognise_digits.py  solve_sudoku.py  visualize.py
(+195 files in other folders)
